--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "buildCommand": "bun run build",
   "devCommand": "bun dev",
   "installCommand": "bun install",
+  "bunVersion": "1.x",
   "framework": "nextjs",
   "git": {
     "deploymentEnabled": {
